# ChangeLog for sys-cluster/charm
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/charm/ChangeLog,v 1.43 2014/11/24 00:16:57 ottxor Exp $

*charm-6.6.0-r1 (24 Nov 2014)

  24 Nov 2014; Christoph Junghans <ottxor@gentoo.org> +charm-6.6.0-r1.ebuild:
  added python-3.4 support

  26 Sep 2014; Christoph Junghans <ottxor@gentoo.org> charm-6.6.0.ebuild:
  clean up install

*charm-6.6.0 (26 Sep 2014)

  26 Sep 2014; Christoph Junghans <ottxor@gentoo.org> +charm-6.6.0.ebuild:
  version bump

  15 Dec 2013; Nicolas Bock <nicolasbock@gentoo.org> charm-6.5.1-r3.ebuild:
  sys-cluster/charm-6.5.1-r3: Fix python build time requirements for
  documentation.

*charm-6.5.1-r3 (13 Dec 2013)

  13 Dec 2013; Nicolas Bock <nicolasbock@gentoo.org> +charm-6.5.1-r3.ebuild,
  +files/charm-6.5.1-fix-markupSanitizer.patch:
  sys-cluster/charm: Adding charm-6.5.1-r3 from sci overlay.

  13 Dec 2013; Nicolas Bock <nicolasbock@gentoo.org> metadata.xml:
  sys-cluster/charm: Updated maintainer email to gentoo.org

*charm-6.5.1-r2 (18 Oct 2013)

  18 Oct 2013; Christoph Junghans <ottxor@gentoo.org> +charm-6.5.1-r2.ebuild,
  +files/charm-6.5.1-static-library-fix.patch:
  import from sci overlay

*charm-6.5.1-r1 (09 Oct 2013)

  09 Oct 2013; Christoph Junghans <ottxor@gentoo.org> +charm-6.5.1-r1.ebuild,
  +files/charm-6.5.1-CkReductionMgr.patch,
  +files/charm-6.5.1-charmc-gentoo.patch,
  +files/charm-6.5.1-cleanup-config.patch,
  +files/charm-6.5.1-fix-navmenuGenerator.patch,
  +files/charm-6.5.1-fix-string-parsing.patch, -charm-5.9.ebuild,
  -charm-6.1.2-r2.ebuild, -charm-6.2.0.ebuild, -charm-6.5.0.ebuild,
  -files/charm-5.9-gcc-4.2.patch, -files/charm-5.9-gcc4.patch,
  -files/charm-6.1.2-charmc-gentoo.patch, -files/charm-6.1.2-charmrun.patch,
  -files/charm-6.2.0-gcc-4.7.patch, -files/charm-6.5.0-charmc-gentoo.patch,
  -files/charm-charmc-gentoo.patch, -files/charm-doc-makefile-gentoo.patch,