@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile install postinst prepare setup test
+DEPEND=mpi? ( virtual/mpi ) doc? ( >=app-text/poppler-0.12.3-r3[utils] dev-tex/latex2html virtual/tex-base || ( ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-python/beautifulsoup-4[python_targets_python2_7(-),python_single_target_python2_7(+)] dev-python/lxml[python_targets_python2_7(-),python_single_target_python2_7(+)] ) ( dev-lang/python:3.4 >=dev-python/beautifulsoup-4[python_targets_python3_4(-),python_single_target_python3_4(+)] dev-python/lxml[python_targets_python3_4(-),python_single_target_python3_4(+)] ) ( >=dev-lang/python-3.3.2-r2:3.3 >=dev-python/beautifulsoup-4[python_targets_python3_3(-),python_single_target_python3_3(+)] dev-python/lxml[python_targets_python3_3(-),python_single_target_python3_3(+)] ) ) media-libs/netpbm || ( >=dev-lang/python-2.7.5-r2:2.7 dev-lang/python:3.4 >=dev-lang/python-3.3.2-r2:3.3 ) ) virtual/fortran
+DESCRIPTION=Message-passing parallel language and runtime system
+EAPI=5
+HOMEPAGE=http://charm.cs.uiuc.edu/
+IUSE=charmdebug charmtracing charmproduction cmkopt doc examples mlogft mpi ampi numa smp static-libs syncft tcp
+KEYWORDS=~amd64 ~x86
+LICENSE=charm
+RDEPEND=mpi? ( virtual/mpi ) virtual/fortran
+REQUIRED_USE=doc? ( ) cmkopt? ( !charmdebug !charmtracing ) charmproduction? ( !charmdebug !charmtracing )
+SLOT=0
+SRC_URI=http://charm.cs.uiuc.edu/distrib/charm-6.6.1.tar.gz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	fortran-2	db8710b355fc5598015c4bc3aad3bdb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	e3288bc2e6e487674ce218b632701c9e	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
+_md5_=f15ba7b0b824698d3c541fc5a35522d4
