@@ -10,21 +10,23 @@ AUX charm-6.5.1-fix-string-parsing.patch 1658 SHA256 e6223fbb97685715ee9e1f02bb5
 AUX charm-6.5.1-static-library-fix.patch 17080 SHA256 1cebaeb901c88a4f35a148fd51ce0c3e8050946f46b25575adad56c44296c99e SHA512 8209a8af4e316a5b961500e70450a87db2ceea9dd409cb73cdf8133dc4ba53e1bb73dfa7a2fd1c819f9a0d37b1ee9760bdda181aa73e2e5fe370d53e12cec82a WHIRLPOOL a782704014012fcfe7b28ce01514846d390c34ceadf64ef27eeb3e8e724aaf490c88ac0d8f093f3d1c8628769a58d7844849ba2587ed0288a733aac17bf40b12
 DIST charm-6.5.1.tar.gz 19265741 SHA256 68aa43e2a6e476e116a7e80e385c25c6ac6497807348025505ba8bfa256ed34a SHA512 1a25c76f3699e30d0614e85f39ea0f594896cbc299b0e670c52fcea176171e8834ea7f9ba3ba0c1957598b0f1cbfa6a4ed9279ae0c030fa32faa6acca879b694 WHIRLPOOL 0def514af09c137b951842250fe112c68e573e8eff7d5911a71ccbe55cc38b319f1d9c4587e706777f748b0c1ef69b63c4161bbf663b05984a566ff325fa49c3
 DIST charm-6.6.0.tar.gz 18779545 SHA256 c916010f2d4cc2c6bd30ea19764839d0298fb56d1696d8ff08d9fa9a61dfb1c9 SHA512 fd6cc2fa8919198fdceb8187101882a61fe974fed3ddd65b102c95b850877429fe0675a55d54075e4a2accad134f615ff717a7dd39fbd9af5fa65a5c87d34e0b WHIRLPOOL 97cfbb45c9456e79d3b6f868c6acfbf8c8701f87743139a17cdb25fbb3a90fdf9a137e8da04df0ab25569ca1b9307c910fe02dc61a84b247bf81d112e0547317
+DIST charm-6.6.1.tar.gz 125697465 SHA256 2aa16fd3015dce0a0932ab5253578a72ddbcb889bc0d23584c42b28446915467 SHA512 139409fff76ac9811b2efe6605579a877738f873b112d4e4da25f079598f6c238cf76e677ed3cf3f92aa59f29710feea3e96e59e6010e186e4191dfa4c3ef92e WHIRLPOOL d56dd8a2cf11152bcc8dd5d1bd166d28bebca02e81bb6fdc3de6c5bf4a6bdcd72f7b854cf42576d32d23fe994a207451ebca44ac9cf6a5d8b982d2e4141d422b
 EBUILD charm-6.5.1-r1.ebuild 5368 SHA256 07aeebc151441baa3aee6b3cddc6e36bf9ddaa516dc342c3478a6e95a3a17f7e SHA512 12d2afb4c88e900542e44d19c35fabe0502260e612b3da81fc60cca05ca3ddc652a1cce54960aa9a7bdd9b5f45986a13a2c911ae48307194f8f1ddaec845e218 WHIRLPOOL 1ecd4405bb5eaa962d1b3b56c32e8693cfd5ce06aa5874b07d9a89782f52313278fe61457b4a4f3c9a4a1122f02686ce0b3a72d68d8c67a7048024d606d0d9e1
 EBUILD charm-6.5.1-r2.ebuild 5431 SHA256 e40245a09e9889a053fb4ebaaa9f6651218993af1c94ae3699e0cd0a15e74767 SHA512 d181c08a298d8733456facc532953c0f018e53a1a032da816e39d40a6a05a0ec4c8ec93dd7b5bbe197835dd36951708ccdeb4b9548e697dca349a75fbf7fc083 WHIRLPOOL 52a48f96bb73bcff41b3e27ff5f518ed573350b6821d1634e106788d49ffe2356a6e1621dca0787432359e034bbc7310e9e683e00669b7c57647f4599b284a9f
 EBUILD charm-6.5.1-r3.ebuild 5496 SHA256 01488757549d007923056f62804e889987e11b8e1855c1114e04c0750f9cc1d9 SHA512 2a57c3dbfe4d6169df664b805edb373a389bccb34ea2945dd57bfdb4b6bc2689cbbdc54b01e96a3f4b77cf3fd4abe6939a8491dc1b091073787f60a43b4376a3 WHIRLPOOL c545712c7d8c711ad2997161afc43ad71493c10647811c21706b56ca71140ba706cddd51b5a3f91672821730e6e4ebf7baadb78b6e99e624ea775a7ca847eb04
 EBUILD charm-6.6.0-r1.ebuild 5737 SHA256 0f3c76799579cb8f3fae7d9ef703b7f7eed2fb202e0863d98ee68dd870533530 SHA512 a1a0a774c261a5c7a780b6c8b70fa38f03035fdf85399a4fad14a86a92c5c392e078c3cae0c88d84b24c6ac8e4a9294c0702b5adf99f4495c8752fcea1ae3b2e WHIRLPOOL dfbce4b5a4fc9f4f5e29c7251810a7ad1e1d50d28d633718181bad2c410faeba8304891d6b7b23bdbe66092f5d589a13c940d124ba8a72bec16395cf64313870
 EBUILD charm-6.6.0.ebuild 5730 SHA256 fd88ca16e7d783a54d1398a3dea386b948b4ba75a327601ecef10af3f2271eb5 SHA512 2710bcda025b277cddb60c7e7ba66568ce36aaac840ad207a7eac5e0f9acb1aa00578fe668be291527404cfdc35d7fb1e571f6f35d1119c6c8d07fe4dbb577e7 WHIRLPOOL ce12c546e4f1097e40c0d48fadab61b03648b354cf387d3f439a3f07b82ee4e2cfc6a05e2963d532dc63c0040139195c6f674d72267e547c90dd83d08508bfe9
-MISC ChangeLog 7394 SHA256 86e2f542e6024eead5226368711be64afa26ba4301993d04d7d25a20a01b20c7 SHA512 99942aadedb1bc3939afad49a91fc9b2b4188317ec58a4e5db5c61204c0eff529cf97e0d4d252e8a25ab4e002d6d6127e26caa5a73182f1cb1832ba7ecabf323 WHIRLPOOL cd949c24cade0daa72b94015e8d5512e5d1ca496283112239d544a612d312b3af9603225dc639bced95277ec0adb9a9eedd10b6f11a98079139e59388452232d
-MISC metadata.xml 801 SHA256 4f15971f2c242322338a8c9a08d45707ce56a9a8d09e4e83a5808dd0754d21e4 SHA512 570f95d5d7609b34529524f7932327d1b1a9a3734211a14696fa8156475cc7a0d61a9fcf81f2732acd8f8ae61f88504635bd4278c061fe9e2ee6b796e9860ad5 WHIRLPOOL 70592d90dd5c757e5ec748b809e4dba8acd1f2900a83d639bd0d2f17bf99f957153d5a7664a8950167dc5b89331c2ea2e462afb592c1de57acf083e2e86e2f42
+EBUILD charm-6.6.1.ebuild 5937 SHA256 9abe0bf78470c588c39603fd3e8ccdedea9959320cd1adfe2281c7f89063cc50 SHA512 9965a1b2dbcdd4a1d0eaf77b705caaed53dbde4f70fe32a15fae0dfff7e0f688a1b57b6d5ff0fdfa4f2fde9327c4192f7496f1c7407c6f9c594fe7e924ef1272 WHIRLPOOL 6a557d454196858867e9710176a3290e9f3736a1da6afa8381238ae0ef56811870ea93a6708cad937e0bbafced45bb6554c0db259d7886f8a9ed6ad7eaa365d1
+MISC ChangeLog 7529 SHA256 deb8fe621fab01a945dbe3a0b7193404262d8af48a2f01ac4db40e8c4c896324 SHA512 a9e3b0ea06b392b2fc48785d5bdb78db92693cf9fa1bf16f004063afe1374d698eab5a11c157324832b4dadc102b3efaa84b93cf790874da2166c8211e199ead WHIRLPOOL 73aa6ac56eb157c841d669ddb16be5602baf93f4b3819752a258bee8d48ab4d6e937ad5991bc4e12c4b2b9110da295ed1e141811cdf772d37641311b93c68e80
+MISC metadata.xml 874 SHA256 8e0d2ea0d53f17245cf79148ac4bca890ccbaeb081eed2b085a33dd1eb688969 SHA512 8932c4cd2dbbb7263419199bce7adeda8f7db6e6e534721ca03777e9914953af4003a570fbb36d3a51942fa81ae3be021bd0a3b3a98e411e8b9e8510fa6be1cd WHIRLPOOL 2f667db923cde6a16e905dc759ae446e0b025a056ae2024520c8d8e3e1873ef5c795b09b40560a545ef893719aecba2c4612051c677ddb5702ecc4d9281682ac
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUcnj+AAoJEOeBhlrCAAWGGsMH+wdhIqElKtfFtftadQLElkxx
-prHGSeEg7FymMzhG5NDuW6iku56Z4ZUGvf7YsfM+Nu3yvoMWWJj6K17wrhB9ihd7
-4I+zhi8KieCeakLzq1Bxzmr39udpb6wyTTj8ZD5liJwScqF0Mest3FIuLVuRr+aV
-k1bd5rH0/jBp7q88BpduSGWwvnZ4cf9/zk04Df0596OhsHrCTQ2im6sbNtChyEeq
-RfhWxXRMQH0u7HKv85XDpvqmJ2onuPahC0S1NA7r+vEtqRO1nCKyIHKX6p1P+QL2
-EzVn7tV7NnFgfs4IR/gyJZsCG3ceTCfBSKU6xnujwa5uu6A+DugtomthPc9npm8=
-=oIzW
+iQEcBAEBCAAGBQJU+kvAAAoJEOeBhlrCAAWGm0MH/0JsQMyRx/fzHGbe8SvRyMAO
+1VVsGsMUQnF8Ch0NU58rhxGoZgPJQSz7EVBK8DTk7/iGE4R8FzJp7pODGRL8ooHT
+PizWQwkg1ZF94zgwgNYqea1fkJT0sXqnwV1HJJj0a5GZjC0kWa2GMkyXJYrOlxrf
+Dd2LhHhR12y6o6EnR3rh3Zcz0v6tOMhiGWpr4zJKgO81Sqidb5FjJmqvmzfnuPQM
+UxCohKtv7LUr2JX8QVt+A1WBfVauwrbkc3An3hdJ3TJz0Z1V3H7bR45HNpzFJmRB
+CovCLOH+lLUpLF1I5D5S3OE9Po4ko8qjWQp7XQGdc/9O+UD5g2R5gFUFHSIS4bQ=
+=P9B+
 -----END PGP SIGNATURE-----
