@@ -6,6 +6,7 @@
 		<email>nicolasbock@gentoo.org</email>
 	</maintainer>
 	<use>
+		<flag name="ampi">Build implementation of MPI on top of Charm++</flag>
 		<flag name="charmdebug">Enable the charm debugger</flag>
 		<flag name="charmproduction">Optimize performance of Charm++ runtime</flag>
 		<flag name="charmtracing">Enable tracing support in Charm++</flag>
