@@ -1,6 +1,12 @@
 # ChangeLog for sys-cluster/charm
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/charm/ChangeLog,v 1.43 2014/11/24 00:16:57 ottxor Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/charm/ChangeLog,v 1.44 2015/03/07 00:52:11 ottxor Exp $
+
+*charm-6.6.1 (07 Mar 2015)
+
+  07 Mar 2015; Christoph Junghans <ottxor@gentoo.org> +charm-6.6.1.ebuild,
+  metadata.xml:
+  version bump
 
 *charm-6.6.0-r1 (24 Nov 2014)
 
